# third_party_gettext

./: BUILD.gn  OAT.xml  README.OpenSource
gettext-runtime/: config.h
gettext-runtime/intl/: attribute.h  libgnuintl.h  plural.c
